# dolci-harbor

./: .gitignore  README.md
adapters/dolci/: README.md  pyproject.toml
adapters/dolci/src/dolci/: __init__.py  adapter.py  main.py
adapters/dolci/src/dolci/task-template/environment/: Dockerfile.ifeval  Dockerfile.math
datasets/dolci-rl-zero-mix-7b/code_00002_19326d35/: instruction.md  task.toml
datasets/dolci-rl-zero-mix-7b/code_00005_c7ed5a85/: instruction.md  task.toml
datasets/dolci-rl-zero-mix-7b/code_00010_2462ee6c/: instruction.md  task.toml
datasets/dolci-rl-zero-mix-7b/code_stdio_00017_3fc7c632/: instruction.md  task.toml
datasets/dolci-rl-zero-mix-7b/code_stdio_00025_1319f55d/: instruction.md  task.toml
datasets/dolci-rl-zero-mix-7b/code_stdio_00027_0a4bd8be/: task.toml
datasets/dolci-rl-zero-mix-7b/ifeval_00000_84f678f7/: instruction.md  task.toml
datasets/dolci-rl-zero-mix-7b/ifeval_00003_266831ca/: instruction.md  task.toml
datasets/dolci-rl-zero-mix-7b/ifeval_00006_561cdc68/: instruction.md  task.toml
datasets/dolci-rl-zero-mix-7b/math_00001_fac2098e/: instruction.md  task.toml
datasets/dolci-rl-zero-mix-7b/math_00004_174900bf/: instruction.md  task.toml
datasets/dolci-rl-zero-mix-7b/math_00009_0b86fc1c/: task.toml
datasets/sample/: README.md
datasets/sample/code_00002_19326d35/: task.toml
datasets/sample/code_00005_c7ed5a85/: task.toml
datasets/sample/code_00010_2462ee6c/: task.toml
datasets/sample/code_stdio_00017_3fc7c632/: task.toml
datasets/sample/code_stdio_00025_1319f55d/: task.toml
(+35 files in other folders)
