[project]
name = "harbor-dolci-adapter"
version = "0.1.0"
description = "Harbor adapter for allenai/Dolci-RL-Zero-Mix-7B (math, code, code_stdio, ifeval)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=2.14",
]

[project.scripts]
dolci = "dolci.main:main"

[build-system]
requires = ["hatchling>=1,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dolci"]
